# FraudIntelligence

./: .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: bicep-validate.yml  ci.yml  docker-build.yml  infra-deploy.yml  mlops.yml  release.yml  scale.yml
agents/: README.md
dashboards/grafana/: README.md  scoring-api-slo.json
docs/: architecture.md  brand.md  checkpoint-003-architecture-updated-from-docs.md  cicd-setup.md  demo-script.md  production-readiness.md  runbook.md
docs/adr/: ADR-0001-container-apps-over-aks.md  ADR-0002-onnx-in-process-scoring.md  ADR-0003-cosmos-multi-master-graph.md  ADR-0004-event-hubs-stream-analytics.md  ADR-0005-fabric-onelake.md  ADR-0006-semantic-kernel-orchestration.md  ADR-0007-azure-openai-model-split.md  ADR-0008-security-governance-triad.md
docs/assets/: heimdall-kpi-visual-v2.html  heimdall-kpi-visual.html
docs/compliance/: eba-fraud-reporting.md  eu-ai-act.md  gdpr.md  psd2-sca.md
eventhub-emulator/: config.json
fabric/: README.md
fabric/notebooks/: 00_setup_lakehouse.ipynb  10_bronze_ingest.ipynb  20_silver_clean.ipynb  30_gold_marts.ipynb
fabric/pipelines/: orchestrate_medallion.json
infra/: README.md  addons.bicep  addons.json  main.bicep  main.json  parameters.dev.json  parameters.example.json  parameters.prod.json  platform.bicep
infra/modules/: acr.bicep  aml.bicep  apim.bicep  containerapps.bicep  cosmos.bicep  defender.bicep  eventhubs.bicep  fabric.bicep  frontdoor.bicep  functions.bicep  grafana.bicep  keyvault.bicep  loganalytics.bicep  monitor.bicep  network.bicep  openai.bicep  openai.json  policy.bicep  purview.bicep  redis.bicep  sentinel.bicep  servicebus.bicep  streamanalytics.bicep  streamanalytics.json  synapse.bicep
ml/: README.md  conda.yaml  publish_gnn_features.py  score.py  train_ensemble.py  train_gnn.py
ml/aml_jobs/: deploy_endpoint.yml  rai_scorecard.yml  rai_scorecard_config.json  register_models.yml  train_ensemble.yml  train_gnn.yml
ml/data/: synthetic_data.py
ml/notebooks/: 01_eda.ipynb  02_train_local.ipynb  03_explainability.ipynb
ml/rai_bootstrap/: ci_rai_run.sh  register_submit.py  report.py
ml/tests/: sample_request.json  test_data_gen.py  test_score.py  test_train_ensemble_smoke.py
ops/grafana/dashboards/: fraud_intel.json
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/otel/: config.yaml
ops/prometheus/: prometheus.yml
powerbi/: .gitignore  README.md  dataset_schema.md  eba_fraud.pbip  eba_fraud.pbix  measures.dax
powerbi/eba_fraud.Report/: .platform  definition.pbir
powerbi/eba_fraud.Report/definition/: report.json
powerbi/eba_fraud.Report/definition/pages/: pages.json
powerbi/eba_fraud.Report/definition/pages/EbaQuarterlyReport/: page.json
powerbi/eba_fraud.Report/definition/pages/ExecutiveOverview/: page.json
powerbi/eba_fraud.Report/definition/pages/Operational/: page.json
powerbi/eba_fraud.SemanticModel/: .platform  model.bim
powerbi/eba_fraud.SemanticModel/definition/: model.tmdl  relationships.tmdl
powerbi/eba_fraud.SemanticModel/definition/tables/: Dim_Country.tmdl  Dim_Date.tmdl  Dim_Exemption.tmdl  Dim_FraudType.tmdl  Dim_Instrument.tmdl  Fact_Eba.tmdl  Fact_Exemption.tmdl  Fact_Latency.tmdl  Fact_Tx.tmdl  _Measures.tmdl
powerbi/eba_fraud_dashboard.pbip/: .pbip
powerbi/eba_fraud_dashboard.pbip/definition/: model.bim  report.json
powerbi/eba_fraud_dashboard.pbip/definition/pages/: EbaQuarterlyReport.json  ExecutiveOverview.json  Operational.json
scripts/: build-and-push-images.sh  check-readiness.sh  demo-web.sh  demo.sh  demo_client.py  demo_scenarios.py  demo_web.py  deploy.sh  import-grafana-dashboard.sh  preflight.sh  run_rai_scorecard.sh  scale-to-min.sh  scale-to-prod.sh  smoke-test.sh  teardown.sh
scripts/demo_video/: README.md  gen_frames.py  scenarios_sample.json
services/agentic-orchestrator/: .env.example  Dockerfile  README.md  pyproject.toml
services/agentic-orchestrator/app/: __init__.py  api.py  cosmos.py  demo.py  llm.py  main.py  planner.py  state.py  telemetry.py  tools.py
services/agentic-orchestrator/app/agents/: __init__.py  base.py  case_manager.py  graph_analyst.py  narrative.py  policy.py  reflector.py  triage.py
services/agentic-orchestrator/examples/: expected_narrative.md  sample_alert.json
services/agentic-orchestrator/tests/: conftest.py  test_agents.py  test_planner.py  test_workflow_e2e.py
services/eba-reporter/: Dockerfile  README.md  job.yaml  models.py  pyproject.toml  report.py
services/eba-reporter/templates/: eba_q.xlsx.j2
services/eba-reporter/tests/: conftest.py  test_cli.py  test_models.py  test_report.py
services/enforcement-function/: README.md  function_app.py  requirements.txt
services/enforcement-function/tests/: test_enforcement.py
services/feature-builder/: README.md  features_core.py  function_app.py  host.json  local.settings.json  pipeline.py  pyproject.toml  requirements.txt  storage.py
services/feature-builder/tests/: conftest.py  test_features.py
services/scoring-api/: .env.example  Dockerfile  README.md  pyproject.toml
services/scoring-api/app/: __init__.py  api.py  cosmos_client.py  eh_producer.py  features.py  main.py  models.py  psd2_optimizer.py  sb_producer.py  scoring.py  seed_data.py  settings.py  telemetry.py
services/scoring-api/models/: ensemble.onnx
services/scoring-api/scripts/: load_test.py
services/scoring-api/tests/: conftest.py  factories.py  test_aggregates_redis.py  test_features_cache.py  test_health.py  test_psd2_optimizer.py  test_score_endpoint.py  test_scoring.py
services/transaction-simulator/: Dockerfile  README.md  pyproject.toml
services/transaction-simulator/simulator/: __init__.py  __main__.py  data.py  main.py  patterns.py  reporter.py
services/transaction-simulator/tests/: test_data.py  test_main.py  test_patterns.py  test_reporter.py
slides/: FraudIntelligence_AMA_Capstone.pptx  README.md  build_deck.py  build_executive_briefing.py
tests/integration/: README.md  conftest.py  pytest.ini  requirements.txt  test_e2e_smoke.py
(+26 files in other folders)
