[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eba-reporter"
version = "1.0.0"
description = "EBA/GL/2020/01 quarterly fraud report generator for Heimdall platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Heimdall Team" }]

dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "openpyxl>=3.1.2",
    "azure-identity>=1.15.0",
    "azure-storage-file-datalake>=12.14.0",
    "azure-cosmos>=4.5.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "click>=8.1.7",
    "tenacity>=8.2.3",
    "deltalake>=0.15.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "black>=24.4.0",
    "mypy>=1.8.0",
]

[project.scripts]
eba-report = "report:cli"

[tool.setuptools]
py-modules = ["report", "models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
