[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-builder"
version = "1.0.0"
description = "Event Hubs -> Cosmos feature-store builder (Azure Functions) for Heimdall platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Heimdall Team" }]

dependencies = [
    "azure-functions>=1.21.3",
    "azure-cosmos>=4.7.0",
    "azure-identity>=1.17.1",
    "azure-eventhub>=5.12.1",
    "structlog>=24.4.0",
    "pydantic>=2.8.2",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "black>=24.4.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
py-modules = ["features_core", "storage", "pipeline", "function_app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.black]
line-length = 100
target-version = ["py311"]
