[project]
name = "scoring-api"
version = "0.1.0"
description = "Heimdall real-time scoring API (p99 < 18 ms)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Heimdall" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "h11>=0.14",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "orjson>=3.10",
    "azure-cosmos>=4.6",
    "azure-eventhub>=5.11",
    "azure-identity>=1.16",
    "redis>=5.0",
    "async-timeout>=4.0",
    "onnxruntime>=1.17",
    "numpy>=1.26",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-logging>=0.46b0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "fakeredis>=2.21",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "locust>=2.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC"]
ignore = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
