[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-intel-simulator"
version = "0.1.0"
description = "Realistic Nordic card-transaction load generator for the Heimdall scoring API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Heimdall" }]
dependencies = [
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.7.0",
    "plotly>=5.22.0",
    "jinja2>=3.1.4",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "respx>=0.21.1",
]

[project.scripts]
simulator = "simulator.main:app"

[tool.setuptools.packages.find]
include = ["simulator*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501", "B008"]  # B008: Typer-style defaults are intentional

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
testpaths = ["tests"]
